<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.0.2.RELEASE</version>
    </parent>

    <artifactId>legaltech</artifactId>
    <packaging>jar</packaging>
    <modelVersion>4.0.0</modelVersion>

    <description>
        FYI: run "mvn clean install exec:exec" to rebuild and run application!
    </description>

    <properties>
        <solr-version>8.0.0</solr-version>
        <solr-text-tagger-version>2.5</solr-text-tagger-version>
    </properties>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.3</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>2.7</version>
            </plugin>
        </plugins>
    </reporting>

    <build>

        <!-- Let's set java version to 1.8 -->
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.2</version>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>

            <!-- Let's configure spring boot to prepare executable jar file -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <mainClass>com.legaltech.EmbeddedSolrBoot</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Run "mvn clean install exec:exec" to rebuild and run application! -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <id>default-cli</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <argument>-Dsolr-config.home=${basedir}/solr-config</argument>
                                <argument>-Dsolr.data.dir=${basedir}/indexes</argument>
                                <argument>-Dsolr.ulog.dir=${basedir}/ulog</argument>
                                <argument>-Dsolr.log.dir=${basedir}/logs</argument>
                                <argument>-Dsolr.allow.unsafe.resourceloading=true</argument>
                                <argument>-Dsolr.ltr.enabled=true</argument>

                                <argument>-agentlib:jdwp=transport=dt_socket,server=y,address=localhost:8000,suspend=n</argument>
                                <argument>-XX:+PrintGCDetails</argument>
                                <argument>-XX:+PrintGCDateStamps</argument>
                                <argument>-XX:+PrintGCTimeStamps</argument>
                                <argument>-XX:+HeapDumpOnOutOfMemoryError</argument>
                                <argument>-jar</argument>
                                <argument>
                                    ${basedir}/target/${project.name}-${project.version}.jar
                                </argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>


        </plugins>

    </build>


    <dependencies>

        <!-- Solr dependencies -->
        <dependency>
            <groupId>org.apache.solr</groupId>
            <artifactId>solr-solrj</artifactId>
            <version>${solr-version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.solr</groupId>
            <artifactId>solr-core</artifactId>
            <version>${solr-version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.solr</groupId>
            <artifactId>solr-ltr</artifactId>
            <version>${solr-version}</version>
        </dependency>
        <dependency>
            <groupId>org.opensextant</groupId>
            <artifactId>solr-text-tagger</artifactId>
            <version>${solr-text-tagger-version}</version>
        </dependency>

        <!-- Spring Boot dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-tomcat</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jetty</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-checkstyle-plugin</artifactId>
            <version>3.0.0</version>
            <type>maven-plugin</type>
        </dependency>

    </dependencies>

</project>
